cmake_minimum_required(VERSION 3.26)
project(2022)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED true)

add_subdirectory(day_01)
add_subdirectory(day_02)
add_subdirectory(day_03)
add_subdirectory(day_04)
add_subdirectory(day_05)
add_subdirectory(day_06)
add_subdirectory(day_07)
add_subdirectory(day_08)
add_subdirectory(day_09)
add_subdirectory(day_10)